@@ -6,8 +6,10 @@ import static org.junit.Assert.fail;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import org.junit.Test;
 import randoop.ExceptionalExecution;
@@ -35,12 +37,12 @@ public class FieldGetterTest {
     Class<?> c = ClassWithFields.class;
     ClassOrInterfaceType classType = new NonParameterizedType(c);
     Field field = c.getField("fourField");
-    Type fieldType = new PrimitiveType(field.getType());
+    Type fieldType = PrimitiveType.forClass(field.getType());
     TypedOperation rhs = createGetter(field, fieldType, classType);
 
     // types
     assertTrue("Should be no input types : " + rhs.getInputTypes(), rhs.getInputTypes().isEmpty());
-    assertEquals("Output type should match type of field", fieldType, rhs.getOutputType());
+    assertEquals(fieldType, rhs.getOutputType());
 
     // code generation
     String expected = "int int0 = randoop.field.ClassWithFields.fourField;";
@@ -49,37 +51,31 @@ public class FieldGetterTest {
     Variable var = new Variable(seq, 0);
     StringBuilder b = new StringBuilder();
     st.appendCode(var, new ArrayList<Variable>(), b);
-    assertEquals("Expect initialization of variable from static field", expected, b.toString());
+    assertEquals(expected, b.toString());
 
     // execution - should be 4 (haven't changed value yet)
     NormalExecution expectedExec = new NormalExecution(4, 0);
-    NormalExecution actualExec = (NormalExecution) rhs.execute(new Object[0], null);
-    assertTrue(
-        "Execution should simply return value",
-        expectedExec.getRuntimeValue().equals(actualExec.getRuntimeValue())
-            && expectedExec.getExecutionTime() == actualExec.getExecutionTime());
+    NormalExecution actualExec = (NormalExecution) rhs.execute(new Object[0]);
+    assertEquals(expectedExec.getRuntimeValue(), actualExec.getRuntimeValue());
+    assertEquals(expectedExec.getExecutionTime(), actualExec.getExecutionTime());
   }
 
   @SuppressWarnings("ClassNewInstance")
   @Test
   public void testInstanceField()
-      throws NoSuchFieldException, SecurityException, InstantiationException,
-          IllegalAccessException {
+      throws NoSuchFieldException, NoSuchMethodException, SecurityException, InstantiationException,
+          IllegalAccessException, InvocationTargetException {
     Class<?> c = ClassWithFields.class;
     ClassOrInterfaceType classType = new NonParameterizedType(c);
 
     Field field = c.getField("oneField");
-    Type fieldType = new PrimitiveType(field.getType());
+    Type fieldType = PrimitiveType.forClass(field.getType());
     TypedOperation rhs = createGetter(field, fieldType, classType);
 
     // types
-    List<Type> inputTypes = new ArrayList<>();
-    inputTypes.add(classType);
-    assertEquals(
-        "Input types should just be declaring class",
-        new TypeTuple(inputTypes),
-        rhs.getInputTypes());
-    assertEquals("Output type should match type of field", fieldType, rhs.getOutputType());
+    List<Type> inputTypes = Collections.singletonList(classType);
+    assertEquals(new TypeTuple(inputTypes), rhs.getInputTypes());
+    assertEquals(fieldType, rhs.getOutputType());
 
     // code generation
     String expected = "int int1 = classWithFields0.oneField;";
@@ -97,8 +93,7 @@ public class FieldGetterTest {
     TypedOperation consOp = new TypedClassOperation(cons, classType, new TypeTuple(), classType);
     Sequence seqInit = new Sequence().extend(consOp, new ArrayList<Variable>());
 
-    ArrayList<Variable> vars = new ArrayList<>();
-    vars.add(new Variable(seqInit, 0));
+    List<Variable> vars = Collections.singletonList(new Variable(seqInit, 0));
     // bind getter "call" to initialization
     Statement st_rhs = new Statement(rhs);
     Sequence seq = seqInit.extend(rhs, vars);
@@ -106,30 +101,26 @@ public class FieldGetterTest {
     Variable var1 = new Variable(seq, 0);
     // - second variable is for value
     Variable var2 = new Variable(seq, 1);
-    vars = new ArrayList<>();
-    vars.add(var1);
+    vars = Collections.singletonList(var1);
     StringBuilder b = new StringBuilder();
     st_rhs.appendCode(var2, vars, b);
-    assertEquals("Expect initialization of variable from static field", expected, b.toString());
+    assertEquals(expected, b.toString());
 
     // execution
     // null object
     Object[] inputs = {null};
-    ExecutionOutcome nullOutcome = rhs.execute(inputs, null);
+    ExecutionOutcome nullOutcome = rhs.execute(inputs);
     assertTrue(
-        "Expect null pointer exception",
         nullOutcome instanceof ExceptionalExecution
             && ((ExceptionalExecution) nullOutcome).getException() instanceof NullPointerException);
 
     // actual object
     NormalExecution expectedExec = new NormalExecution(1, 0);
     inputs = new Object[1];
-    inputs[0] = c.newInstance();
-    NormalExecution actualExec = (NormalExecution) rhs.execute(inputs, null);
-    assertTrue(
-        "Execution should simply return value",
-        expectedExec.getRuntimeValue().equals(actualExec.getRuntimeValue())
-            && expectedExec.getExecutionTime() == actualExec.getExecutionTime());
+    inputs[0] = c.getDeclaredConstructor().newInstance();
+    NormalExecution actualExec = (NormalExecution) rhs.execute(inputs);
+    assertEquals(expectedExec.getRuntimeValue(), actualExec.getRuntimeValue());
+    assertEquals(expectedExec.getExecutionTime(), actualExec.getExecutionTime());
   }
 
   @Test
@@ -138,12 +129,12 @@ public class FieldGetterTest {
     ClassOrInterfaceType classType = new NonParameterizedType(c);
 
     Field field = c.getField("FIVEFIELD");
-    Type fieldType = new PrimitiveType(field.getType());
+    Type fieldType = PrimitiveType.forClass(field.getType());
     TypedOperation rhs = createGetter(field, fieldType, classType);
 
     // types
-    assertTrue("Should be no input types", rhs.getInputTypes().isEmpty());
-    assertEquals("Output type should match type of field", fieldType, rhs.getOutputType());
+    assertTrue(rhs.getInputTypes().isEmpty());
+    assertEquals(fieldType, rhs.getOutputType());
 
     // code generation
     String expected = "int int0 = randoop.field.ClassWithFields.FIVEFIELD;";
@@ -152,16 +143,13 @@ public class FieldGetterTest {
     Variable var = new Variable(seq, 0);
     StringBuilder b = new StringBuilder();
     st_rhs.appendCode(var, new ArrayList<Variable>(), b);
-    assertEquals(
-        "Expect initialization of variable from static final field", expected, b.toString());
+    assertEquals(expected, b.toString());
 
     // execution --- has value 5
     NormalExecution expectedExec = new NormalExecution(5, 0);
-    NormalExecution actualExec = (NormalExecution) rhs.execute(new Object[0], null);
-    assertTrue(
-        "Execution should simply return value",
-        expectedExec.getRuntimeValue().equals(actualExec.getRuntimeValue())
-            && expectedExec.getExecutionTime() == actualExec.getExecutionTime());
+    NormalExecution actualExec = (NormalExecution) rhs.execute(new Object[0]);
+    assertEquals(expectedExec.getRuntimeValue(), actualExec.getRuntimeValue());
+    assertEquals(expectedExec.getExecutionTime(), actualExec.getExecutionTime());
   }
 
   @Test
@@ -169,10 +157,7 @@ public class FieldGetterTest {
     String getterDescr = "randoop.field.ClassWithFields.<get>(oneField)";
     try {
       TypedOperation getter = FieldGet.parse(getterDescr);
-      assertEquals(
-          "parse should return object that converts to string",
-          getterDescr,
-          getter.toParsableString());
+      assertEquals(getterDescr, getter.toParsableString());
     } catch (OperationParseException e) {
       fail("Parse error: " + e.getMessage());
     }
